RESOLVED FIXED138757
Raise an exception if -[WKWebView initWithFrame:configuration:] is passed a nil configuration
https://bugs.webkit.org/show_bug.cgi?id=138757
Summary Raise an exception if -[WKWebView initWithFrame:configuration:] is passed a n...
Anders Carlsson
Reported 2014-11-14 14:42:56 PST
Raise an exception if -[WKWebView initWithFrame:configuration:] is passed a nil configuration
Attachments
Patch (1.40 KB, patch)
2014-11-14 14:43 PST, Anders Carlsson
simon.fraser: review+
Anders Carlsson
Comment 1 2014-11-14 14:43:45 PST
Anders Carlsson
Comment 2 2014-11-15 10:41:19 PST
Note You need to log in before you can comment on or make changes to this bug.