Raise an exception if -[WKWebView initWithFrame:configuration:] is passed a nil configuration https://bugs.webkit.org/show_bug.cgi?id=138757

Reviewed by Simon Fraser.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView initWithFrame:configuration:]):

Canonical link: https://commits.webkit.org/156613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176155 268f45cc-cd09-0410-ab3c-d52691b4dbfc